<resources>
    <string name="app_name">NanitBDay</string>
    <string name="app_title">Nanit Happy Birthday App</string>
    <string name="name_title">Name</string>
    <string name="name_hint">Please enter the name</string>
    <string name="select_a_date">Please select the birth date</string>
    <string name="birth_date_title">Birth Date</string>
    <string name="picture_title">Picture</string>
    <string name="show_birthday_screen">Show Birthday Screen</string>
    <string name="photo_hint">Take a photo or select from gallery</string>
    <string name="btn_general_ok">OK</string>
    <string name="btn_general_cancel">Cancel</string>
    <string name="change_permissions_manually_popup">Please add permission</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share_the_news">Share the news</string>
    <string name="birthday_title">today %s is</string>
    <string name="age_desription">%s old!</string>
    <string name="years">years</string>
    <string name="months">months</string>
</resources>
