<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="moranjani.nanitbday.Utils.DateConverter"/>
        <variable name="model" type="moranjani.nanitbday.view_models.MainActivityViewModel"/>
        <variable name="iDetailsFragment" type="moranjani.nanitbday.IDetailsFragment"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:text="@string/app_title" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/name_title" />

            <EditText
                android:id="@+id/name_editText"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@{model.name}" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:text="@string/birth_date_title" />

            <EditText
                android:id="@+id/birth_date_edit_text"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/select_a_date"
                android:inputType="none"
                android:maxLines="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@{DateConverter.dateToString(model.birthDate)}"
                android:onClick="@{() -> iDetailsFragment.onBirthDateClicked()}"
                />
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:text="@string/picture_title" />

            <TextView
                android:id="@+id/picture_text_view"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:ellipsize="start"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/photo_hint"
                android:text="@{model.pictureUri}"/>

        </LinearLayout>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{model.buttonEnabled}"
            android:text="@string/show_birthday_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
